infrastructure/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: football-analytics
  labels:
    app: football-analytics
